objects/agf__ADM_Signoff__c.object
<CustomObject>
    <fields>
        <fullName>agf__Actual_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When the approval is delegated through the approval process, this field is updated by the ADM_Signoff.trigger with the actual approver.</description>
        <label>Actual Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Signoffs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Approval_Comments_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by Approval Process when record has been approved or rejected. Used by Signoff&apos;s trigger to update the Signoff_Comments__c field.</description>
        <label>Approval Comments Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Approver_Role__c</fullName>
        <description>Application Approver&apos;s Approval Role</description>
        <formula>TEXT(agf__Release_Approver__r.agf__Approver_Role__c)</formula>
        <inlineHelpText>Approver Role from Application Approver record</inlineHelpText>
        <label>Approver Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Signoffs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Exception_Cost__c</fullName>
        <description>Describe the cost of granting the exception.</description>
        <inlineHelpText>Describe the cost of granting the exception in terms of customer impact, staff impact or additional risk which may be introduced as a result.</inlineHelpText>
        <label>Exception Cost</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Exception_Request__c</fullName>
        <description>Describe the exception for which this approval is being requested.</description>
        <inlineHelpText>Describe the exception for which this approval is being requested. Explain how it deviates from standard procedures.</inlineHelpText>
        <label>Exception Request</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Release_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Application Approver related to this signoff record.</description>
        <inlineHelpText>Enter this Signoff record&apos;s Application Approver.</inlineHelpText>
        <label>Release Approver</label>
        <referenceTo>agf__ADM_Application_Approver__c</referenceTo>
        <relationshipLabel>Signoffs</relationshipLabel>
        <relationshipName>Signoffs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Release__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Release</label>
        <referenceTo>agf__ADM_Release__c</referenceTo>
        <relationshipLabel>Signoffs</relationshipLabel>
        <relationshipName>Signoffs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Signoff_Comments__c</fullName>
        <label>Signoff Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__checked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__eRelease_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>eRelease Request this Signoff record is approving</description>
        <inlineHelpText>eRelease Request this Signoff record is approving. Cannot specify both Release and eRelease Request.</inlineHelpText>
        <label>eRelease Request</label>
        <referenceTo>agf__eRelease_Request__c</referenceTo>
        <relationshipLabel>Signoffs</relationshipLabel>
        <relationshipName>Signoffs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__is_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set when the Signoff record is submitted for approval by a Field Update. Then reset when the request has been approved or rejected (also by an approval process Field Update).</description>
        <label>is Locked</label>
        <type>Checkbox</type>
    </fields>
    <label>Signoff</label>
    <nameField>
        <displayFormat>SO-{00000}</displayFormat>
        <label>Signoff Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Signoffs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>agf__Approver_must_be_Applications_Approver</fullName>
        <active>true</active>
        <description>The Approver must be an Application Approver of the Application to which  this Release is related.</description>
        <errorConditionFormula>agf__Release__r.agf__Application__r.Name   &lt;&gt; agf__Release_Approver__r.agf__Application__r.Name</errorConditionFormula>
        <errorDisplayField>agf__Release_Approver__c</errorDisplayField>
        <errorMessage>The Approver must be an Application Approver of the Application to which  this Signoff record&apos;s Release is related.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Either_Release_or_eRelease_Request</fullName>
        <active>true</active>
        <description>Either the Release field or the eRelease Request field must be specified, but not both.</description>
        <errorConditionFormula>(ISBLANK(agf__Release__c) &amp;&amp; ISBLANK(agf__eRelease_Request__c)) ||
  (NOT(ISBLANK(agf__Release__c)) &amp;&amp; NOT(ISBLANK(agf__eRelease_Request__c)))</errorConditionFormula>
        <errorMessage>Either Release must be specified or eRelease Request must be specified, but both cannot be entered.</errorMessage>
    </validationRules>
</CustomObject>